Updated database and modified folder locations

--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="main_pages"></div>
+    <div id="sub_pages"></div>
     
     <script src="../scripts/script.js"></script>
 </body>
