Ordering of objects is correct, need to only display correct page data now

--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -10,6 +10,8 @@
 <body>
     <div id="main_pages"></div>
     <div id="sub_pages"></div>
+    <div id="main_content"></div>
+    <div id="sub_content"></div>
     
     <script src="../scripts/script.js"></script>
 </body>
