Change page rendering to using url parameters

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,8 +10,7 @@
 <body>
     <div id="main_pages"></div>
     <div id="sub_pages"></div>
-    <div id="main_content"></div>
-    <div id="sub_content"></div>
+    <div id="content"></div>
 
     <script src="../scripts/script.js"></script>
 </body>
