--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     <div id="main_pages"></div>
     <div id="sub_pages"></div>
     <div id="content"></div>
+    <div id="footer"></div>
 
     <script src="../scripts/script.js"></script>
 </body>
